Support adhoc demo.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,36 @@
+--extra-index-url https://download.pytorch.org/whl/cu118
+# basic dependencies
 torch>=2.0.1
 torchvision>=0.15.2
 transformers==4.37.2
 tokenizers==0.15.1
-sentencepiece==0.1.99
-shortuuid
 deepspeed==0.13.1
 accelerate==0.21.0
 peft==0.4.0
+timm==1.0.3
+numpy==1.24.4
+# data processing
 decord==0.6.0
-pytorchvideo==0.1.5
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
+pytorchvideo==0.1.5
 moviepy==1.0.3
 scenedetect==0.6.3
-numpy
+opencv-python==4.7.0.72
+# misc
 scikit-learn==1.2.2
+huggingface_hub==0.22.2
+sentencepiece==0.1.99
+shortuuid
 einops==0.6.1
 einops-exts==0.0.4
-timm==0.6.13
 bitsandbytes==0.41.0
-pydantic<2,>=1
+pydantic>=2.0
 markdown2[all]
-gradio==3.35.2
-gradio_client==0.2.9
+gradio==3.50.0
+gradio_client==0.6.1
+httpx==0.24.1
 requests
-httpx==0.24.0
 uvicorn
 fastapi
 wandb
