--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,15 +14,17 @@ classifiers = [
 ]
 dependencies = [
     "torch>=2.0.1", "torchvision>=0.15.2", 
-    "tokenizers==0.15.1", "sentencepiece==0.1.99",
-    "transformers==4.41.2", "accelerate==0.21.0",
-    "deepspeed==0.13.1", "peft==0.4.0", "shortuuid",
-    "decord==0.6.0", "pytorchvideo==0.1.5", "imageio==2.34.0", "imageio-ffmpeg==0.4.9", 
-    "moviepy==1.0.3", "scenedetect==0.6.3", "numpy", "scikit-learn==1.2.2",
-    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
+    "transformers==4.37.2", "tokenizers==0.15.1", 
+    "deepspeed==0.13.1", "accelerate==0.21.0",
+    "peft==0.4.0", "timm==1.0.3", "numpy==1.24.4",
+    "decord==0.6.0", "imageio==2.34.0", "imageio-ffmpeg==0.4.9",
+    "pytorchvideo==0.1.5", "moviepy==1.0.3", "scenedetect==0.6.3",
+    "opencv-python==4.7.0.72",
+    "scikit-learn==1.2.2", "huggingface_hub==0.22.2", "sentencepiece==0.1.99",
+    "shortuuid", "einops==0.6.1", "einops-exts==0.0.4", 
     "bitsandbytes==0.41.0", "pydantic<2,>=1", "markdown2[all]", 
-    "gradio==3.35.2", "gradio_client==0.2.9",
-    "requests", "httpx==0.24.0", "openai", "uvicorn", "fastapi", "wandb"
+    "gradio==3.35.2", "gradio_client==0.2.9", "httpx==0.24.0",
+    "requests", "openai", "uvicorn", "fastapi", "wandb"
 ]
 
 [project.optional-dependencies]
