--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "torch>=2.0.1", "torchvision>=0.15.2", 
+    "torch==2.0.1", "torchvision==0.15.2", 
     "transformers==4.37.2", "tokenizers==0.15.1", 
     "deepspeed==0.13.1", "accelerate==0.21.0",
     "peft==0.4.0", "timm==1.0.3", "numpy==1.24.4",
@@ -22,8 +22,8 @@ dependencies = [
     "opencv-python==4.7.0.72",
     "scikit-learn==1.2.2", "huggingface_hub==0.22.2", "sentencepiece==0.1.99",
     "shortuuid", "einops==0.6.1", "einops-exts==0.0.4", 
-    "bitsandbytes==0.41.0", "pydantic<2,>=1", "markdown2[all]", 
-    "gradio==3.35.2", "gradio_client==0.2.9", "httpx==0.24.0",
+    "bitsandbytes==0.41.0", "pydantic>=2.0", "markdown2[all]", 
+    "gradio==3.50.0", "gradio_client==0.6.1", "httpx==0.24.1",
     "requests", "openai", "uvicorn", "fastapi", "wandb"
 ]
 
