--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 --extra-index-url https://download.pytorch.org/whl/cu118
 # basic dependencies
-torch>=2.0.1
-torchvision>=0.15.2
+torch==2.0.1
+torchvision==0.15.2
 transformers==4.37.2
 tokenizers==0.15.1
 deepspeed==0.13.1
