--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 --extra-index-url https://download.pytorch.org/whl/cu118
 # basic dependencies
-torch>=2.2.0
-torchvision>=0.17.0
+torch==2.2.0
+torchvision==0.17.0
 transformers==4.40.0
 tokenizers==0.19.1
 deepspeed==0.13.1
-accelerate==0.21.0
+accelerate==0.26.1
 peft==0.4.0
 timm==1.0.3
 numpy==1.24.4
@@ -34,4 +34,5 @@ requests
 openai
 uvicorn
 fastapi
+tensorboard
 wandb
