--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "torch==2.1.0", "torchvision==0.16.0", 
+    "torch==2.2.0", "torchvision==0.17.0", 
     "transformers==4.41.2", "tokenizers==0.19.1", 
     "deepspeed==0.13.1", "accelerate==0.26.1",
     "peft==0.4.0", "timm==1.0.3", "numpy==1.24.4",
@@ -24,7 +24,7 @@ dependencies = [
     "shortuuid", "einops==0.6.1", "einops-exts==0.0.4", 
     "bitsandbytes==0.43.0", "pydantic>=2.0", "markdown2[all]", 
     "gradio==3.50.0", "gradio_client==0.6.1", "httpx==0.24.1",
-    "requests", "openai", "uvicorn", "fastapi", "tensorboard", "wandb"
+    "requests", "openai", "uvicorn", "fastapi", "tensorboard", "wandb", "tabulate"
 ]
 
 [project.optional-dependencies]
