--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 --extra-index-url https://download.pytorch.org/whl/cu118
 # basic dependencies
-torch==2.1.0
-torchvision==0.16.0
+torch==2.2.0
+torchvision==0.17.0
 transformers==4.41.2
 tokenizers==0.19.1
 deepspeed==0.13.1
@@ -15,7 +15,7 @@ imageio==2.34.0
 imageio-ffmpeg==0.4.9
 moviepy==1.0.3
 scenedetect==0.6.3
-opencv-python==4.7.0.72
+opencv-python==4.6.0.66
 pysubs2
 # misc
 scikit-learn==1.2.2
@@ -36,3 +36,4 @@ uvicorn
 fastapi
 tensorboard
 wandb
+tabulate
