--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "peft==0.4.0", "timm==1.0.3", "numpy==1.24.4",
     "decord==0.6.0", "imageio==2.34.0", "imageio-ffmpeg==0.4.9",
     "moviepy==1.0.3", "scenedetect==0.6.3",
-    "opencv-python==4.7.0.72", "pysub2",
+    "opencv-python==4.7.0.72", "pysubs2",
     "scikit-learn==1.2.2", "huggingface_hub==0.23.4", "sentencepiece==0.1.99",
     "shortuuid", "einops==0.6.1", "einops-exts==0.0.4", 
     "bitsandbytes==0.43.0", "pydantic>=2.0", "markdown2[all]", 
