--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "torch==2.2.0", "torchvision==0.17.0", 
-    "transformers==4.40.0", "tokenizers==0.19.1", 
+    "torch==2.2.0", "torchvision==0.17.0", "torchaudio==2.2.0", "librosa",
+    "transformers==4.42.3", "tokenizers==0.19.1", 
     "deepspeed==0.13.1", "accelerate==0.26.1",
     "peft==0.4.0", "timm==1.0.3", "numpy==1.24.4",
     "decord==0.6.0", "imageio==2.34.0", "imageio-ffmpeg==0.4.9",
