--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,15 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
 [project]
 name = "videollama2"
 version = "1.0"
+authors = [
+    {name = "Zesen Cheng", email = "cyanlaser@stu.pku.edu.cn"},
+    {name = "Hang Zhang"},
+    {name = "Xin Li"},
+]
 description = "Release of VideoLLaMA2"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -18,8 +23,7 @@ dependencies = [
     "deepspeed==0.13.1", "accelerate==0.26.1",
     "peft==0.4.0", "timm==1.0.3", "numpy==1.24.4",
     "decord==0.6.0", "imageio==2.34.0", "imageio-ffmpeg==0.4.9",
-    "moviepy==1.0.3", "scenedetect==0.6.3",
-    "opencv-python==4.6.0.66", "pysubs2",
+    "moviepy==1.0.3", "opencv-python==4.6.0.66", "pysubs2",
     "scikit-learn==1.2.2", "huggingface_hub==0.23.4", "sentencepiece==0.1.99",
     "shortuuid", "einops==0.6.1", "einops-exts==0.0.4", 
     "bitsandbytes==0.43.0", "pydantic>=2.0", "markdown2[all]", 
@@ -27,15 +31,11 @@ dependencies = [
     "requests", "openai", "uvicorn", "fastapi", "tensorboard", "wandb", "tabulate"
 ]
 
-[project.optional-dependencies]
-train = ["ninja"]
-
 [project.urls]
 "Homepage" = "https://github.com/DAMO-NLP-SG/VideoLLaMA2"
 "Bug Tracker" = "https://github.com/DAMO-NLP-SG/VideoLLaMA2/issues"
 
-[tool.setuptools.packages.find]
-exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
-
-[tool.wheel]
-exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
+[tool.pdm.build]
+excludes = ["./.git"]
+package-dir = "."
+includes = ["./videollama2"]
